# SilverBellProject

./: .gitignore  CMakeLists.txt  README.md  任务清单.md
Application/: CMakeLists.txt
Application/Include/: Application.hh  Config.hh  GlobalContext.hh  RendererWindow.hh  Window.hh
Application/Private/: Application.h  Main.cpp
Application/Source/: Application.cc  Config.cc  GlobalContext.cc  Main.cc  RendererWindow.cc  Window.cc
Assets/Shaders/: 如何将HLSL编译成SPIRV.md
Assets/Shaders/Triangle/HLSL/: TrianglePS.hlsl  TriangleVS.hlsl  快速命令.md
Assets/Shaders/Triangle/SPIR-V/: TrianglePS.spv  TriangleVS.spv
InternalLib/: CMakeLists.txt
InternalLib/Include/: BeforeRender.hh  CallbackSystem.hh  ContainerTraits.hh  DirectedGraph.hh  DirectedGraphTraversal.hh  FunctionTraits.hh  Hash.hh  ImageImporter.hh  InternalLibMarco.hh  Logger.hh  Math.hh  Mesh.hh  Mixins.hh  ModelImporter.hh
InternalLib/Source/: BeforeRender.cc  Hash.cc  ImageImporter.cc  Logger.cc  Math.cc  ModelImporter.cc  test.cc
Renderer/: CMakeLists.txt
Renderer/Include/: RenderGraph.hh  RenderGraphCompiler.hh  RenderGraphExecutor.hh  RenderPass.hh  RenderPassReflection.hh  RenderResource.hh  RendererMarco.hh  Shader.hh  ShaderManager.hh  VulkanRenderer.hh  VulkanUtil.hh
Renderer/Private/: RendererBase.cpp  RendererMarco.h  VulkanRenderer.cpp  VulkanUtil.h
Renderer/Public/: RendererBase.h  VulkanRenderer.h
Renderer/Source/: RenderGraph.cc  RenderGraphCompiler.cc  RenderGraphExecutor.cc  RenderPass.cc  RenderPassReflection.cc  RenderResource.cc  Shader.cc  ShaderManager.cc  VulkanRenderer.cc
